@@ -1,6 +1,8 @@
 Pre-release - work in progress
+    - Minor update of Shor's algorithm example ["examples/shor.cpp"]
+    - Renamed ["examples/qasm/qasm.cpp"] to ["examples/qasm/qpp_qasm.cpp"]
     -
-
+    
 Version 3.0 - 5 October 2021
     - Major release, bumped up C++ standard to C++17
     - Decoupled the OpenQASM parser from the main codebase. A hard copy of
